Add module-info to interpreter-dsl