@@ -1003,13 +1003,21 @@ lazy val `interpreter-dsl` = (project in file("lib/scala/interpreter-dsl"))
   .settings(
     version := "0.1",
     frgaalJavaCompilerSetting,
+    moduleInfos := Seq(
+      AutomaticModule("org.enso.interpreter.dsl")
+    ),
     Compile / javacOptions := ((Compile / javacOptions).value ++
-    // Only run ServiceProvider processor and ignore those defined in META-INF, thus
-    // fixing incremental compilation setup
-    Seq(
-      "-processor",
-      "org.netbeans.modules.openide.util.ServiceProviderProcessor"
-    )),
+      // Only run ServiceProvider processor and ignore those defined in META-INF, thus
+      // fixing incremental compilation setup
+      Seq(
+        "-processor",
+        "org.netbeans.modules.openide.util.ServiceProviderProcessor",
+        "--add-exports",
+        s"jdk.compiler/com.sun.tools.javac.util=${moduleInfos.value.head.moduleName}",
+        "--add-exports",
+        s"jdk.compiler/com.sun.tools.javac.code=${moduleInfos.value.head.moduleName}",
+      ),
+    ),
     libraryDependencies ++= Seq(
       "org.apache.commons" % "commons-lang3"           % commonsLangVersion,
       "org.netbeans.api"   % "org-openide-util-lookup" % netbeansApiVersion,
